env/code_53beb5ebcd80d/stderr.txt
  File "main.py", line 2
    print Hello world"
                    ^
SyntaxError: invalid syntax
